--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 @font-face {
   font-family: 'moonshinerregular';
@@ -39,6 +40,23 @@
   font-style: normal;
 
 }
+/*
+Imported Font names:
+ *Roboto - (thin/regular/bold/etc..)
+  font-family: "Roboto", sans-serif;
+  font-weight:(100/400/700/etc..);
+  font-style:(normal/italic);
+
+ *Unbuntu - (light/regular/bold/etc..)
+  font-family: "Unbuntu", sans-serif;
+  font-weight:(300/400/700/etc..);
+  font-style:(normal/italic);
+
+ *Cormorant Garamond - (light/regular/bold/etc..)
+  font-family: "Roboto", serif;
+  font-weight:(300/400/700/etc..);
+  font-style:(normal/italic);
+*/
 
 /* Use * for debugging */
 *{
@@ -65,6 +83,12 @@ h3, h4{
 :root{
     --white: #FFFFFF;
     --black: #000000;
+    --burgundy: #800020;
+    --coffee: #99592A;
+    --parchment: #DEB887;
+    --sunbleached: #E9D0AF;
+    --magnolia: #426A5A;
+    --mint: #c0f2dd;
 }
 
 body{
@@ -84,6 +108,7 @@ header{
   justify-content: space-between;
   align-items: center;
   padding-bottom: 1%;
+  background-color: var(--coffee);
 }
 header nav{
   display:flex;
@@ -103,14 +128,15 @@ header nav{
   }
   header ul li a {
     text-decoration: none;
-    color:var(--black);
+    background-color: var(--magnolia);
+    color:var(--mint);
     text-transform: uppercase;
     font-size: 1rem;
     border-radius:4px;
     border:1px solid black;
     cursor:pointer;
     padding: 2px;
-    
+    font-family:'Roboto';
   }
 /*
     header ul li a:hover{
@@ -126,27 +152,47 @@ header nav{
 
 /*Main content*/
 main{
-  background-color: papayawhip;
+  background-color: var(--parchment);
   width:64%;
+  /*Look for me if you can't make a line across the
+  borders of the main section.
+  Padding in main overrides all?
+  */
+  padding: 0% 1% 0% 1%;
 }
 .welcome{
   font-family: "Cormorant Garamond", serif;
   font-weight: 400;
   font-style: normal;
+  
 }
 
 /*Left and Right borders*/
 .leftSpace{
-  width:18%;
-  background-color:lightblue;
+  width:17%;
+  background-image:linear-gradient(to right, var(--sunbleached) 0%, var(--parchment) 90%);
 }
 .rightSpace{
-  background-color: lightcoral;
-  width:18%;
+  background-image: linear-gradient(to left, var(--sunbleached) 0%, var(--parchment) 90%);
+  width:17%;
 }
 
 footer{
   display:flex;
   flex-flow:row;
   width: 100%;
+}
+
+/*Action List Page*/
+.tag{
+  text-decoration: none;
+  padding: 1px;
+  border-radius: 0px;
+  border: 2px solid var(--black);
+  background-color: var(--burgundy);
+  color: var(--white);
+}
+.vectorPinnableElement{
+    width:18%;
+    background-color:lightblue;
 }
