--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -62,6 +62,24 @@ Imported Font names:
 *{
 
 }
+.error{
+  text-wrap:wrap;
+  text-decoration: underline;
+  font-weight: bold;
+  color: red;
+}
+:root{
+  --white: #FFFFFF;
+  --black: #000000;
+  --burgundy: #800020;
+  --coffee: #99592A;
+  --lightbrew: #B06630;
+  --chocolatebar: #402612;
+  --parchment: #fffdd0;
+  --sunbleached: #E9D0AF;
+  --magnolia: #426A5A;
+  --mint: #c0f2dd;
+}
 
 html{
   font-family: "Ubuntu", sans-serif;
@@ -78,17 +96,9 @@ h3, h4{
   font-weight: 500;
   font-style: normal;
 }
-
-/* variables go here */
-:root{
-    --white: #FFFFFF;
-    --black: #000000;
-    --burgundy: #800020;
-    --coffee: #99592A;
-    --parchment: #fffdd0;
-    --sunbleached: #E9D0AF;
-    --magnolia: #426A5A;
-    --mint: #c0f2dd;
+a{
+  color:var(--black);
+  text-decoration:none;
 }
 
 body{
@@ -97,8 +107,12 @@ body{
   height:100%;
   display:flex;
   flex-wrap: wrap;
+  overflow: scroll;
 }
-
+.nodotsul,.nodotsul li{
+  padding:0;
+  list-style-type: none;
+}
 /* Header and its css content */
 header{
   /*Regretably needed to repeat display to work*/
@@ -108,8 +122,9 @@ header{
   justify-content: space-between;
   align-items: center;
   padding-bottom: 1%;
-  background-color: var(--coffee);
+  background-image: linear-gradient(to top, var(--lightbrew) 1% , var(--coffee) 40%);
 }
+
 header nav{
   display:flex;
   width:75%;
@@ -139,6 +154,7 @@ header nav{
     font-family:'Roboto';
   }
 /*
+commented out due to time and it looking ugly.
     header ul li a:hover{
       background:linear-gradient(to bottom, white 5%, skyblue 100%);
     }
@@ -160,12 +176,6 @@ main{
   */
   padding: 0% 1% 0% 1%;
 }
-.welcome{
-  font-family: "Cormorant Garamond", serif;
-  font-weight: 400;
-  font-style: normal;
-  
-}
 
 /*Left and Right borders*/
 .leftSpace{
@@ -183,16 +193,83 @@ main{
   background-position: right;
   /* background-color: var(--parchment); */
 }
-
+.endSpace{
+  width: 20px;
+  height: 60px;
+  
+}
 footer{
   display:flex;
   flex-flow:row;
+  margin:0;
   width: 100%;
   background-color: var(--coffee);
+  background-image: linear-gradient(to bottom, var(--lightbrew) 0% , var(--coffee) 40%);
   min-height: 40px;
 }
 
+/* Home Page */
+.subtext {
+  font-size:small;
+  font-style:italic;
+  color:var(--chocolatebar);
+  margin: 0;
+  margin-bottom: 8px;
+}
+.welcome h2{
+  font-size: 3rem;
+  margin: 0;
+}
+.welcome p{
+  margin-bottom: 16px;
+}
+
+
+.explanation h2, .explanation p{
+  margin: 0;
+  margin-bottom: 1%;
+  font-size: 2rem;
+}
+.explanation p{
+  font-size: 1rem;
+}
+.jumpTo li{
+  margin-bottom: 8px;
+  
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.jumpTo a{
+  text-decoration: none;
+  padding: 1px;
+  border-radius: 4px;
+  border: 2px solid var(--black);
+  background-color: var(--burgundy);
+  color: var(--white);
+}
+.jumpTo p {
+  margin: 0;
+  margin-top: 3px;
+  display: inline;
+}
+.jumpTo a:hover{
+  transition: 0.2s ease-in-out;
+  background-color: var(--black);
+  color: var(--mint);
+}
+#helpfulTools h2{
+  margin-block-end: 0px;
+}
+#helpfulTools li a {
+  font-size: 1.5rem;
+  font-weight:400;
+  border-bottom: 2px solid var(--black);
+}
 /*Action List Page*/
+  #actionListBody{
+    background-color: var(--magnolia);
+  }
+
   #leftActionBar{
     width: 10%;
     background-image: url("../img/BurntEdgesSharpRight.png"), linear-gradient(to left, var(--parchment) 50% , var(--coffee) 110%);
@@ -214,6 +291,7 @@ footer{
       position:-webkit-sticky;
       position:sticky;
       top: 0;
+      height: fit-content;
   }
   .navbar ul{
     word-wrap: break-word;
@@ -221,17 +299,16 @@ footer{
   .navbar li {
     overflow: hidden;
     text-decoration: none;
-    list-style-type: none;
     width: 100%;
     padding-top: 1%;
     border-bottom:1px solid var(--black);
     white-space: nowrap;
     text-overflow: ellipsis;
-
   }
   .navbar li a {
     color: inherit;
     text-decoration: inherit;
+    padding-left:10px;
   }
   .navbar:hover{
     width: 23%;
@@ -326,7 +403,7 @@ footer{
     align-items: center; 
     padding: 10px; 
     font-size: 20px; 
-    border-radius: 10px; 
+    border-radius: 10px;
   } 
   /* back to being used */
   .tag{
@@ -342,6 +419,13 @@ footer{
     flex-flow:row;
     order: 2;
     width: 100%;
-    height:800px;
+    height: auto;
   }
-
+  /* glossary */
+  .glossary h2{
+    border-bottom: 2px solid var(--black);
+    margin-bottom: 5px;
+  }
+  .glossary p {
+    margin: 0;
+  }
